create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2145,8 +2145,8 @@ body {
 .cid-qy0BfZcOMT {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #efefef;
+  background-image: url("../../../assets/images/wp1895664-1920x1080.jpg");
 }
 .cid-qy0BfZcOMT .media-container-row .mbr-text I {
-  color: #232323;
+  color: #efefef;
 }
